Fix columns collapsing too soon on shop page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -768,7 +768,7 @@ blockquote::after {
 }
 
 /* Shop Page Merch Images */
-@media screen and (max-width: 1755px) {
+@media screen and (max-width: 945px) {
 	.column {
 		float: none;
   		width: 100%;
@@ -786,27 +786,23 @@ blockquote::after {
 	}
 }
 
-@media screen and (max-width: 1530px) {
+@media screen and (max-width: 915px) {
 	.zazzle-image {
-		width: 40vw;
+		width: 50vw;
+	}
+
+	.column {
+		padding: 20px 0;
+	}
+
+	.row {
+		padding: 20px 0;
 	}
 }
 
 @media screen and (max-width: 915px) {
 	.zazzle-image {
 		width: 60vw;
-	}
-
-	.column {
-		float: none;
-  		width: 100%;
-		text-align: center;
-		line-height:150%;
-		padding: 20px 0;
-	}
-
-	.row {
-		padding: 20px 0;
 	}
 }
 
@@ -1095,27 +1091,6 @@ blockquote::after {
 
 	.margin-bottom {
 		margin-bottom: 10px;
-	}
-	
-	#shop-box {
-	  	margin-right: 0;
-		background: transparent;
-		background-size: contain;
-	}
-
-	#shop-info {
-		padding: 0 10px 40px 10px;
-	}
-
-	#shop-background {
-		background: #313131;
-	}
-
-	.column {
-  		width: 100%;
-		text-align: center;
-		line-height:150%;
-		padding: 20;
 	}
 
 	#history-box {
